resources/dsaas-stg/sentry-preview/ike-prow-plugins-hook.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ike-prow-plugins-hook
spec:
  host: ike-prow-plugins-hook.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hook
    weight: 100
  wildcardPolicy: None
