resources/dsaas-stg/sentry-preview/sentry.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: sentry
  name: sentry
spec:
  host: errortracking.prod-preview.openshift.io
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sentry
    weight: 100
  wildcardPolicy: None
